# uuid-cpp

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: uuid.hpp  uuid_defs.hpp  uuid_engine.hpp
include/uuid-cpp/: uuid.hpp  uuid_core.hpp  uuid_engine.hpp
src/: uuid.cpp  uuid_core.cpp  uuid_engine.cpp  uuid_win32.cpp
test/: CMakeLists.txt  main.cpp  uuid_tests.cpp
